--- a/OpenBeacon/config-phones.h.sample
+++ b/OpenBeacon/config-phones.h.sample
@@ -1,4 +1,4 @@
 #define PHONE  "+79000000000"
-#define PHONE1 "+79000000000"
-#define PHONE2 "+79000000000"
-#define PHONE3 "+79000000000"
+// #define PHONE1 "+79000000000"
+// #define PHONE2 "+79000000000"
+// #define PHONE3 "+79000000000"
