--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,51 @@
-config-phones.h
+OpenBeacon/config-phones.h
+pack.sh
+OpenBeacon/build-atmega328/*
+build-atmega328/*
+/tmp/*
+*.bin
+*.d
+*.dfu
+*.tgz
+*.dll
+*.elf
+*.exe
+*.generated.h
+*.hex
+*.lst
+*.o
+*.obj
+*.px4
+*.pyc
+*.tlog
+*.vbrain
+*.vrx
+*~
+.*.swo
+.*.swp
+.DS_Store
+.autotools
+.built
+.context
+.cproject
+.depend
+.directory
+.metadata/
+.project
+.settings/
+.tags
+.tags_sorted_by_file
+.vagrant
+LASTLOG.TXT
+Make.dep
+Thumbs.db
+autotest.lck
+build
+cmake_install.cmake
+config.mk
+cscope.in.out
+cscope.out
+cscope.po.out
+dataflash.bin
+eeprom.bin
+index.html
